add row and col defintions

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,9 +19,21 @@
         </Style>
     </Window.Resources>
 
-    <Grid
-        local:GridDef.Columns="*,*,*"
-        local:GridDef.Rows="*,*,Auto,100">
+    <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
         <Rectangle Fill="HotPink" />
         <TextBlock Text="0" />
 
