Revert "add row and col defintions"
This reverts commit 9015495e951d70423490498c2c674cb44edeadbc.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,21 +19,9 @@
         </Style>
     </Window.Resources>
 
-    <Grid>
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="100" />
-        </Grid.RowDefinitions>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-
+    <Grid
+        local:GridDef.Columns="*,*,*"
+        local:GridDef.Rows="*,*,Auto,100">
         <Rectangle Fill="HotPink" />
         <TextBlock Text="0" />
 
