--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,8 +20,8 @@
     </Window.Resources>
 
     <Grid
-        local:GridDef.Columns="*,*,*"
-        local:GridDef.Rows="*, *, Auto, 100">
+        local:GridDef.ColumnDefinitions="*,*,*"
+        local:GridDef.RowDefinitions="*, *, Auto, 100">
 
         <Rectangle Fill="HotPink" />
         <TextBlock Text="0" />
